# xdocs

./: .gitignore  deploy.sh  start-backend.sh
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20260204180000_init.sql  20260204194000_user_registration_approval.sql  20260204201500_download_approval.sql
backend/src/: main.rs
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx  AppSidebar.tsx
frontend/src/contexts/: AuthContext.tsx  DocumentContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Documents.tsx  DownloadRequests.tsx  Generate.tsx  Login.tsx  Register.tsx  Settings.tsx  Users.tsx
